# ChangeLog for dev-perl/File-DesktopEntry
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-DesktopEntry/ChangeLog,v 1.33 2012/06/24 12:59:20 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  06 May 2012; Alexis Ballier <aballier@gentoo.org>
  File-DesktopEntry-0.40.0.ebuild:
  keyword ~amd64-fbsd

  18 Mar 2012; Matt Turner <mattst88@gentoo.org>
  File-DesktopEntry-0.40.0.ebuild:
  Added ~mips.

  26 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  File-DesktopEntry-0.40.0.ebuild:
  Marked ~x86-macos

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -File-DesktopEntry-0.04.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org>
  File-DesktopEntry-0.40.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*File-DesktopEntry-0.40.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org>
  +File-DesktopEntry-0.40.0.ebuild:
  Change version scheme

  17 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  File-DesktopEntry-0.04.ebuild:
  keyword ~sparc-solaris

  05 Aug 2011; Naohiro Aota <naota@gentoo.org> File-DesktopEntry-0.04.ebuild:
  Add ~x86-fbsd.

  31 Jul 2011; Raúl Porcel <armin76@gentoo.org> File-DesktopEntry-0.04.ebuild:
  s390/sh stable

  09 Apr 2011; Markus Meier <maekke@gentoo.org> File-DesktopEntry-0.04.ebuild:
  arm stable, bug #359627

  27 Mar 2011; Tobias Klausmann <klausman@gentoo.org>
  File-DesktopEntry-0.04.ebuild:
  Stable on alpha, bug #359627

  03 Mar 2011; Jonathan Callen <abcd@gentoo.org> File-DesktopEntry-0.04.ebuild:
  Add ~amd64-linux/~x86-linux keywords

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> File-DesktopEntry-0.04.ebuild:
  Add ~alpha/~arm/~s390/~sh

  23 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  File-DesktopEntry-0.04.ebuild:
  ppc64 stable wrt #321147

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  File-DesktopEntry-0.04.ebuild: