@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST File-DesktopEntry-0.04.tar.gz 13784 SHA256 d7f80d8bd303651a43dc1810c73740d38a0d2b158fb33cd3b6ca4d3a566da7cb SHA512 9582f1f226054a82aafd7cc74a924f9a635fa55f61b24c5bd4fcb30ecc8658ab098d782514b0df2bc29f66032cc416aa674bf7fe402e2afe96f018791265393c WHIRLPOOL 0f1a2f4fa379e5fa3459983b0e4fceba3d245ade34463134a09ae29c36281cdd4516552fcd484b92d31d0cb414bd04b19e87314b536f49c4cb00ebcf82230e8f
-EBUILD File-DesktopEntry-0.40.0.ebuild 771 SHA256 03eb111c5607b63bbd509ed8fd51b37ae6d90866455a37abfe83fbfe4fbb704f SHA512 be1f1fadcadc63143a5f1b840b9c6be9478e50796a69cdb76859f06301f80282d58bb79c6792bb33d7554619eef327fe481fb7174125f2200c1c2de71f1c1820 WHIRLPOOL 39cc5f38896752faf5fc5da85044cd253174417b0bfae33179c383cac44146738f620f262c506891c8685f35d26cc661b627501bb4c726c1ef00c587a716cc75
-MISC ChangeLog 4034 SHA256 8b592414ab18fdec31ee5a22e3f573da5fa1d0e555546949c1d10849d2f97943 SHA512 532aa1f380377d5071753c1c6d83fe906f2a1271471e5242a4d02af1c6fe4e7e59b8e4c2f6ee4bae2712a3a15993ba590e67b221dfda90c167fe6a5d1d92c26e WHIRLPOOL 3d992a311abfa6dd0fb641263359e0db436660e3df721e8c2f1b96f0a17155de67aa20e3fd2819d7f7cd3e3ac42797d42d8ba6bab0048a88670383e1a738919a
+EBUILD File-DesktopEntry-0.40.0-r1.ebuild 769 SHA256 16b716a6af484ab234a0dcca89f84f8f00edfca9d119a99df5bcde1a3e8955b6 SHA512 35ad6c133f5da6e62db9768b8739bc2d2dab192719b3526f77fbe99b6c96ebe4f3cd4e2383a777474eae9a2fa613383878d4b9bc3832963c7712ac529fd71584 WHIRLPOOL d9da386b75e2421c2d202bddb1d0f5dcb7b010e32be3542462ec7cf781c9ac66988cddaaf0f3d90ce60f001ab274a7b7ea9bb92072d7525cdd106b2cad6edc45
+MISC ChangeLog 4361 SHA256 4b872af6cd89da892b5feda5ccf72ea1dbb4b653200de12dfd6f54c06d6a2938 SHA512 3ba269b51bfd29c83fb79c06c4d64314ffce8b5573b65989f41f70d1cea74d31e9ca1d07c7b480c4c07c0cff72b2663aa8eb4c343a3adecdd0fcf48d56a4317b WHIRLPOOL 201600ae721ba7d258f62eaa93036e7957775e16edf3e500378fe0c839fdc560384ccdd6257c4e45a6dda0e209bc4ffe226063828b8eca80d185ac4dc8aeb056
 MISC metadata.xml 308 SHA256 ca281632a667a93b1fe80f071fcd19c732a6b8582b159ec1782741c871b400ba SHA512 67fff7c40954822477163adc4b3d2c8cde52b0d76f221a27e9ba7dd88e41ae39caaf8d92ae2b9ad4d39a7a7d7969ec0cce0f8a16e7219e825151e12535537de4 WHIRLPOOL 587d1a43720dcdc0b9390ce00849bc1969dc5994d297a82d23d949b882482ead6df3f5e0498b99e1484022e6ab52b62f53d8969aac888d4c742935e55388a89d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP2HsEACgkQ2ugaI38ACPB3XwEAhsNSMLL9z76+Z9HIzwbk24Bb
+b8r7SGzZdnqKK4htWLoA/3hkMlMpNf/PyZydFwg4UbIiok91Ty0hqNkOkxddOhk5
+=5N+d
+-----END PGP SIGNATURE-----
